src/test/resources/json/invalid_inputs/no_start.json.except
No robot's starting position given.